[package]
name = "advent2023"
version = "0.1.0"
authors = ["Anisse Astier <anisse@astier.eu>"]
edition = "2021"

[dependencies]
itertools = "0.12.0"
z3 = { git = "https://github.com/prove-rs/z3.rs/", rev = "50331a4" }
#z3 = { version = "0.12.1", features = ["static-link-z3"] }# cannot find z3.h in fedora
#z3 = "0.12.1"

[features]
ci_no_input = []
